--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>SNAKE</title>
-  <link rel="stylesheet" href="./style.css">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SNAKE</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <header>SNAKE</header>
+    <section class="snakeTable"></section>
+    <section class="modul">
+      <div class="start">
+        <span>Play</span>
+      </div>
+    </section>
 
-</head>
-<body>
-
-<header>SNAKE</header>
-<section class="snakeTable"></section>
-<section class="modul">
-  <div class="start">
-    <span>Play</span>
-  </div>
-</section>
-
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js'></script><script  src="./script.js"></script>
-
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="./script.js"></script>
+  </body>
 </html>
