Add game history feature with a dedicated history page and local storage support

--- a/index.html
+++ b/index.html
@@ -7,11 +7,21 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <header>SNAKE</header>
-    <section class="snakeTable"></section>
-    <section class="modul">
-      <div class="start">
-        <span>Play</span>
+    <a
+      class="btn btn--accent btn--floating"
+      href="./history.html"
+      title="View game history"
+      >History</a
+    >
+    <header class="page-header">SNAKE</header>
+
+    <section class="game">
+      <section class="game__grid"></section>
+    </section>
+
+    <section class="modal">
+      <div class="modal__panel modal__start">
+        <span class="btn btn--accent">Play</span>
       </div>
     </section>
 
